# conceptile-assignment

./: README.md  build.sh  pyproject.toml  render.yaml  requirements.txt  start.sh
conceptile/: .flake8  manage.py
conceptile/conceptile/: asgi.py  settings.py  urls.py  wsgi.py
conceptile/quiz/: admin.py  models.py  urls.py  views.py
conceptile/quiz/migrations/: 0001_initial.py  0002_initals_questions.py  0003_quizsessionquestion.py  0004_quizsession_is_completed.py
conceptile/quiz/templates/quiz/: base.html  quiz.html  results.html  start.html
conceptile/user_auth/: forms.py  urls.py  views.py
conceptile/user_auth/templates/auth/: base.html  login.html  profile.html  register.html
