[tool.poetry]
name = "conceptile assignment submission"
version = "0.1.0"
description = "Quiz assignment django project"
authors = ["Adwaith PJ <adwaithleans616@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
requests = "^2.32.3"
django-browser-reload = "^1.17.0"
flake8 = "^7.1.1"
black = "^24.10.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
